fix: address newest review comments
Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>